Fix page width jump when showing tag suggestions
Closes #2650.

--- a/webroot/css/layouts/elements.css
+++ b/webroot/css/layouts/elements.css
@@ -26,7 +26,6 @@
 
 #autocompletionDiv {
     position: absolute;
-    width: 100%;
 }
 
 #autocompletionDiv ul {
